cmake_minimum_required(VERSION 3.4)

PROJECT(KMEANS)

SET(CMAKE_MODULE_PATH $ENV{HOME}/code/imc-cmake/Modules)
SET(CMAKE_BUILD_TYPE Debug)

ADD_DEFINITIONS(-D_GLIBCXX_USE_CXX11_ABI=0)
set(CMAKE_BUILD_TYPE Debug)

SET(SIMPLEPLOT_ROOT_DIR $ENV{HOME}/local/pricing)
FIND_PACKAGE(SimplePlot REQUIRED)
INCLUDE_DIRECTORIES(${SIMPLEPLOT_INCLUDE_DIRS})

SET(IMCPRICING_ROOT_DIR $ENV{HOME}/local/pricing)
FIND_PACKAGE(IMCPricing REQUIRED)
INCLUDE_DIRECTORIES(${IMCPRICING_INCLUDE_DIRS})

SET(IMCHAMSTER_ROOT_DIR $ENV{HOME}/local/hamster)
FIND_PACKAGE(IMCHamster REQUIRED)
INCLUDE_DIRECTORIES(${IMCHAMSTER_INCLUDE_DIRS})

ADD_EXECUTABLE(cluster2 cluster2.cpp)
target_link_libraries(cluster2 ${SIMPLEPLOT_LIBRARIES} ${IMCHAMSTER_LIBRARIES} ${IMCPRICING_LIBRARIES})
target_compile_features(cluster2 PRIVATE cxx_range_for)
